makes html page display just the cards

--- a/cards.html
+++ b/cards.html
@@ -1,23 +1,48 @@
 
-<pre>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+  article {
+    break-before: auto;
+    border: 1px solid black;
+    display: block;
+    width: 300px;
+    height: 400px;
+    padding: 15px;
+    float: left;
+  }
+
+  h3 {
+    margin: -12px 0 4px -12px;
+  }
+
+  ul {
+    clear: both;
+    display: block;
+  }
+</style>
+</head>
+<body>
+<!--  <pre>
 				.------..------..------..------..------.
 				|C.--. ||A.--. ||R.--. ||D.--. ||S.--. |
 				| :/\: || (\/) || :(): || :/\: || :/\: |
 				| :\/: || :\/: || ()() || (__) || :\/: |
 				| '--'C|| '--'A|| '--'R|| '--'D|| '--'S|
 				`------'`------'`------'`------'`------'
-</pre>
+  </pre>
 
-<ul>
-	<li><a href="#cardCatalogue">Card Catalogue</a></li>
-	<li><a href="#itemCatalogue">Item Catalogue</a></li>
-</ul>
+  <ul>
+    <li><a href="#cardCatalogue">Card Catalogue</a></li>
+    <li><a href="#itemCatalogue">Item Catalogue</a></li>
+  </ul>
 
-<a name="cardCatalogue"></a>
-<h2>The Card Catalogue</h2>
+  <a name="cardCatalogue"></a>
+  <h2>The Card Catalogue</h2>
 
-<ul>
-	<li><a href="#Adrenaline Rush">Adrenaline Rush</a></li>
+  <ul>
+    <!--li><a href="#Adrenaline Rush">Adrenaline Rush</a></li>
 <li><a href="#Bad Batch">Bad Batch</a></li>
 <li><a href="#Basic Shield">Basic Shield</a></li>
 <li><a href="#Battle Focus">Battle Focus</a></li>
@@ -68,7 +93,7 @@
 <li><a href="#Vengeful Rampage">Vengeful Rampage</a></li>
 <li><a href="#Whiskey Shot">Whiskey Shot</a></li>
 <li><a href="#Wooden Spear">Wooden Spear</a></li>
-</ul>
+  </ul-->
 
 
 	<article>
@@ -134,7 +159,7 @@ Stroke of luck increases damage per hit by 1.</section>
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Gladiator</li>
-<li>Hit chance: 75% | DPT: 6</li>
+<li>Hit chance: 72% | DPT: 5</li>
 <li>MSRP: 130</li></ul>
 		</section>
 		<footer></footer>
@@ -155,7 +180,7 @@ Stroke of luck increases damage per hit by 1.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 75% | DPT: 4</li>
+<li>Hit chance: 71% | DPT: 3</li>
 <li>MSRP: 50</li></ul>
 		</section>
 		<footer></footer>
@@ -207,7 +232,7 @@ On what would have been their next turn, if you are still alive you drain 1d4 hp
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Weeping Angel</li>
-<li>Effect chance: 74%</li>
+<li>Effect chance: 75%</li>
 <li>MSRP: 130</li></ul>
 		</section>
 		<footer></footer>
@@ -242,7 +267,7 @@ can reduce xp down to 40, then takes 4 from hp instead.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 74% | DPT: 3</li>
+<li>Hit chance: 72% | DPT: 2</li>
 <li>MSRP: 50</li></ul>
 		</section>
 		<footer></footer>
@@ -322,7 +347,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Basilisk</li>
-<li>Hit chance: 76% | DPT: 4</li>
+<li>Hit chance: 77% | DPT: 3</li>
 <li>Effect chance: 100%</li>
 <li>MSRP: 130</li></ul>
 		</section>
@@ -351,7 +376,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Basilisk</li>
-<li>Hit chance: 77% | DPT: 4</li>
+<li>Hit chance: 78% | DPT: 4</li>
 <li>Effect chance: 100%</li>
 <li>MSRP: 80</li></ul>
 		</section>
@@ -371,7 +396,7 @@ maximum total curse of -3 per level, afterwards penalties come out of hp instead
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 80% | DPT: 3</li>
+<li>Hit chance: 77% | DPT: 3</li>
 <li>MSRP: 20</li></ul>
 		</section>
 		<footer></footer>
@@ -433,7 +458,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Weeping Angel</li>
-<li>Hit chance: 14% | DPT: 1</li>
+<li>Hit chance: 15% | DPT: 1</li>
 <li>Effect chance: 80%</li>
 <li>MSRP: 50</li></ul>
 		</section>
@@ -514,7 +539,7 @@ Chance to flee if below a quarter health</section>
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
-<li>Hit chance: 74% | DPT: 3</li>
+<li>Hit chance: 72% | DPT: 3</li>
 <li>MSRP: 10</li></ul>
 		</section>
 		<footer></footer>
@@ -532,7 +557,7 @@ Strikes opponent with lowest current hp.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 73% | DPT: 3</li>
+<li>Hit chance: 71% | DPT: 3</li>
 <li>MSRP: 20</li></ul>
 		</section>
 		<footer></footer>
@@ -550,7 +575,7 @@ Strikes opponent with highest current hp.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 74% | DPT: 4</li>
+<li>Hit chance: 71% | DPT: 4</li>
 <li>MSRP: 30</li></ul>
 		</section>
 		<footer></footer>
@@ -626,8 +651,8 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Bard, Barbarian, Fighter</li>
-<li>Hit chance: 62% | DPT: 2</li>
-<li>Effect chance: 60%</li>
+<li>Hit chance: 63% | DPT: 2</li>
+<li>Effect chance: 61%</li>
 <li>MSRP: 50</li></ul>
 		</section>
 		<footer></footer>
@@ -666,7 +691,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
-<li>Hit chance: 75% | DPT: 3</li>
+<li>Hit chance: 72% | DPT: 3</li>
 <li>MSRP: 10</li></ul>
 		</section>
 		<footer></footer>
@@ -684,7 +709,7 @@ Roll for damage twice, and use the best result.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Barbarian, Fighter</li>
-<li>Hit chance: 74% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 130</li></ul>
 		</section>
 		<footer></footer>
@@ -713,8 +738,8 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Minotaur</li>
-<li>Hit chance: 75% | DPT: 3</li>
-<li>Effect chance: 52%</li>
+<li>Hit chance: 71% | DPT: 3</li>
+<li>Effect chance: 47%</li>
 <li>MSRP: 130</li></ul>
 		</section>
 		<footer></footer>
@@ -755,7 +780,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Bard, Cleric</li>
-<li>Hit chance: 74% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 20</li></ul>
 		</section>
 		<footer></footer>
@@ -772,7 +797,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 73% | DPT: 7</li>
+<li>Hit chance: 71% | DPT: 7</li>
 <li>MSRP: 80</li></ul>
 		</section>
 		<footer></footer>
@@ -790,7 +815,7 @@ Roll twice for hit. Use the best roll.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Bard, Cleric, Fighter</li>
-<li>Hit chance: 92% | DPT: 4</li>
+<li>Hit chance: 90% | DPT: 4</li>
 <li>MSRP: 50</li></ul>
 		</section>
 		<footer></footer>
@@ -838,7 +863,7 @@ maximum total curse of -3 per level, afterwards penalties come out of hp instead
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 73% | DPT: 2</li>
+<li>Hit chance: 72% | DPT: 2</li>
 <li>MSRP: 50</li></ul>
 		</section>
 		<footer></footer>
@@ -871,7 +896,7 @@ maximum total curse of -3 per level, afterwards penalties come out of hp instead
 		<section>
 			<ul><li>Level: 3</li>
 <li>Usable by: Bard, Barbarian</li>
-<li>Hit chance: 73% | DPT: 6</li>
+<li>Hit chance: 72% | DPT: 6</li>
 <li>MSRP: 130</li></ul>
 		</section>
 		<footer></footer>
@@ -891,8 +916,8 @@ Usually restores between 0-3hp to each opponent, and 1-4hp for the player.
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: All</li>
-<li>Hit chance: 2% | DPT: 1</li>
-<li>Heal chance: 78% | HPT: 2</li>
+<li>Hit chance: 2% | DPT: 0</li>
+<li>Heal chance: 80% | HPT: 2</li>
 <li>MSRP: 130</li></ul>
 		</section>
 		<footer></footer>
@@ -926,7 +951,7 @@ Roll for attack, if you roll less than 10, roll again and use the second roll no
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Cleric, Fighter</li>
-<li>Hit chance: 88% | DPT: 4</li>
+<li>Hit chance: 87% | DPT: 4</li>
 <li>MSRP: 20</li></ul>
 		</section>
 		<footer></footer>
@@ -989,7 +1014,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Fighter</li>
-<li>Hit chance: 75% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 20</li></ul>
 		</section>
 		<footer></footer>
@@ -1028,7 +1053,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 74% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 20</li></ul>
 		</section>
 		<footer></footer>
@@ -1086,7 +1111,7 @@ Damage: 1d6 +1 per wound suffered</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Bard, Fighter</li>
-<li>Hit chance: 74% | DPT: 4</li>
+<li>Hit chance: 73% | DPT: 4</li>
 <li>MSRP: 30</li></ul>
 		</section>
 		<footer></footer>
@@ -1095,11 +1120,11 @@ Damage: 1d6 +1 per wound suffered</section>
 
 
 
-<a name="itemCatalogue"></a>
-<h2>The Item Catalogue</h2>
+  <!--a name="itemCatalogue"></a>
+  <h2>The Item Catalogue</h2>
 
-<ul>
-	<li><a href="#Chocolate Bar">Chocolate Bar</a></li>
+  <ul>
+    <li><a href="#Chocolate Bar">Chocolate Bar</a></li>
 <li><a href="#Potion of Healing">Potion of Healing</a></li>
 <li><a href="#Swiss Chocolate">Swiss Chocolate</a></li>
 <li><a href="#Chaos Theory for Beginners According to Clever Hans">Chaos Theory for Beginners According to Clever Hans</a></li>
@@ -1118,7 +1143,7 @@ Damage: 1d6 +1 per wound suffered</section>
 <li><a href="#The Tale of Sir Robin According to Clever Hans">The Tale of Sir Robin According to Clever Hans</a></li>
 <li><a href="#The Tale of Sir Robin">The Tale of Sir Robin</a></li>
 <li><a href="#Sorting Hat">Sorting Hat</a></li>
-</ul>
+  </ul-->
 
 
 	<article>
@@ -1453,3 +1478,7 @@ If your character has joined a team but your monster hasn't, that monster will b
 		</section>
 		<footer></footer>
 	</article>
+
+
+</body>
+</html>
