ac only soaks damage from melee attacks

--- a/cards.html
+++ b/cards.html
@@ -136,7 +136,8 @@
 			<h3>🛡  Basic Shield  ○</h3>
 		</header>
 		<section>Equip yourself for the battle ahead.</section>
-		<section>Boost: ac +2</section>
+		<section>Boost: ac +2 (max boost of level * 2, or 1 for beginner, then boost granted to hp instead).
+If hit by melee attack, damage comes out of ac boost first.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Bard, Fighter</li>
@@ -256,7 +257,8 @@ On what would have been their next turn, if you are still alive you drain 1d4 hp
 			<h3>🆙  Harden  ○</h3>
 		</header>
 		<section>It's time to put on your big boy pants, and toughen up!</section>
-		<section>Boost: ac +1</section>
+		<section>Boost: ac +1 (max boost of level * 2, or 1 for beginner, then boost granted to hp instead).
+If hit by melee attack, damage comes out of ac boost first.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
@@ -549,7 +551,7 @@ Turns immobilized resets on curse of loki.
 			<h3>🐈  Feline Companion  ○</h3>
 		</header>
 		<section>A low purr in your ears helps you focus your energy.</section>
-		<section>Boost: int +2</section>
+		<section>Boost: int +2 (max boost of level * 2, or 1 for beginner, then boost granted to hp instead).</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Bard, Cleric</li>
@@ -1100,7 +1102,8 @@ Health: 2d4
 			<h3>🔬  Thick Skin  ○</h3>
 		</header>
 		<section>Grow a heavy layer of scales to deflect the blows of thine enemies.</section>
-		<section>Boost: ac +2</section>
+		<section>Boost: ac +2 (max boost of level * 2, or 1 for beginner, then boost granted to hp instead).
+If hit by melee attack, damage comes out of ac boost first.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Basilisk</li>
