--- a/cards.html
+++ b/cards.html
@@ -245,7 +245,7 @@ On what would have been their next turn, if you are still alive you drain 1d4 hp
 <li>Effect chance: 75%</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
-<li>Class: Psychic</li></ul>
+<li>Class: Pyscic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -284,7 +284,7 @@ can reduce xp down to 40, then takes 4 from hp instead.</section>
 <li>Hit chance: 69% | DPT: 2</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
-<li>Class: Psychic</li></ul>
+<li>Class: Pyscic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -490,7 +490,7 @@ Turns immobilized resets on curse of loki.
 <li>Effect chance: 80%</li>
 <li>MSRP: 50</li>
 <li>Targets: int</li>
-<li>Class: Psychic</li></ul>
+<li>Class: Pyscic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -522,7 +522,7 @@ Turns immobilized resets on curse of loki.
 <li>Effect chance: 80%</li>
 <li>MSRP: 80</li>
 <li>Targets: int</li>
-<li>Class: Psychic</li></ul>
+<li>Class: Pyscic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -856,7 +856,7 @@ Health: 2d4
 <li>Hit chance: 67% | DPT: 7</li>
 <li>MSRP: 80</li>
 <li>Targets: ac</li>
-<li>Class: Psychic</li></ul>
+<li>Class: Pyscic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -986,7 +986,7 @@ Usually restores between 0-3hp to each opponent, and 1-4hp for the player.
 <li>Hit chance: 2% | DPT: 1</li>
 <li>Heal chance: 78% | HPT: 2</li>
 <li>MSRP: 130</li>
-<li>Class: Poison</li></ul>
+<li>Class: Poison, AOE</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -1003,7 +1003,7 @@ Usually restores between 0-3hp to each opponent, and 1-4hp for the player.
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
 <li>MSRP: 10</li>
-<li>Class: Psychic</li></ul>
+<li>Class: Pyscic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
