--- a/cards.html
+++ b/cards.html
@@ -1214,6 +1214,8 @@ Damage: 1d6 +1 per wound suffered</section>
   <ul>
     <li><a href="#Chocolate Bar">Chocolate Bar</a></li>
 <li><a href="#Potion of Healing">Potion of Healing</a></li>
+<li><a href="#Pokecen">Pokecen</a></li>
+<li><a href="#Spin Up">Spin Up</a></li>
 <li><a href="#Swiss Chocolate">Swiss Chocolate</a></li>
 <li><a href="#Chaos Theory for Beginners According to Clever Hans">Chaos Theory for Beginners According to Clever Hans</a></li>
 <li><a href="#Chaos Theory for Beginners">Chaos Theory for Beginners</a></li>
@@ -1261,6 +1263,38 @@ Damage: 1d6 +1 per wound suffered</section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
 <li>MSRP: 50</li></ul>
+		</section>
+		<footer></footer>
+	</article>
+
+
+	<article>
+		<a name="Pokecen"></a>
+		<header>
+			<h3>🏩  Pokecen  ○</h3>
+		</header>
+		<section>ポケモンセンター Heal Your Monsters!</section>
+		<section>Usable 1 time.</section>
+		<section>
+			<ul><li>Level: 1</li>
+<li>Usable by: All</li>
+<li>MSRP: 50</li></ul>
+		</section>
+		<footer></footer>
+	</article>
+
+
+	<article>
+		<a name="Spin Up"></a>
+		<header>
+			<h3>🧠  Spin Up  ○</h3>
+		</header>
+		<section>Instantly spin monster back up in a new sleeve.</section>
+		<section>Usable 1 time.</section>
+		<section>
+			<ul><li>Level: 1</li>
+<li>Usable by: All</li>
+<li>MSRP: 20</li></ul>
 		</section>
 		<footer></footer>
 	</article>
