--- a/cards.html
+++ b/cards.html
@@ -246,7 +246,7 @@ On what would have been their next turn, if you are still alive you drain 1d4 hp
 <li>Effect chance: 75%</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
-<li>Class: Pyscic</li></ul>
+<li>Class: Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -285,7 +285,7 @@ can reduce xp down to 40, then takes 4 from hp instead.</section>
 <li>Hit chance: 68% | DPT: 2</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
-<li>Class: Pyscic</li></ul>
+<li>Class: Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -492,7 +492,7 @@ Turns immobilized resets on curse of loki.
 <li>Effect chance: 80%</li>
 <li>MSRP: 50</li>
 <li>Targets: int</li>
-<li>Class: Pyscic</li></ul>
+<li>Class: Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -524,7 +524,7 @@ Turns immobilized resets on curse of loki.
 <li>Effect chance: 80%</li>
 <li>MSRP: 80</li>
 <li>Targets: int</li>
-<li>Class: Pyscic</li></ul>
+<li>Class: Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -859,7 +859,7 @@ Health: 2d4
 <li>Hit chance: 68% | DPT: 7</li>
 <li>MSRP: 80</li>
 <li>Targets: ac</li>
-<li>Class: Pyscic</li></ul>
+<li>Class: Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -1006,7 +1006,7 @@ Usually restores between 0-3hp to each opponent, and 1-4hp for the player.
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
 <li>MSRP: 10</li>
-<li>Class: Pyscic</li></ul>
+<li>Class: Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
