--- a/cards.html
+++ b/cards.html
@@ -56,6 +56,7 @@
 <li><a href="#Camouflage Vest">Camouflage Vest</a></li>
 <li><a href="#Cloak of Invisibility">Cloak of Invisibility</a></li>
 <li><a href="#Coil">Coil</a></li>
+<li><a href="#Concussion">Concussion</a></li>
 <li><a href="#Constrict">Constrict</a></li>
 <li><a href="#Soften">Soften</a></li>
 <li><a href="#Delayed Hit">Delayed Hit</a></li>
@@ -276,15 +277,15 @@ If hit by melee attack, damage comes out of ac boost first.</section>
 			<h3>🤡  Brain Drain  ◆</h3>
 		</header>
 		<section>And we shall bury our enemies in their own confusion.</section>
-		<section>Hit: 1d20 vs ac / Damage: 1d4
+		<section>Hit: 1d20 vs int / Damage: 1d4
 Curse: xp -20
-can reduce xp down to 40, then takes 4 from hp instead.</section>
+Can reduce xp down to 40, then takes 4 from hp instead.</section>
 		<section>
 			<ul><li>Level: 1</li>
-<li>Usable by: All</li>
+<li>Usable by: Cleric, Jinn</li>
 <li>Hit chance: 71% | DPT: 2</li>
 <li>MSRP: 50</li>
-<li>Targets: ac</li>
+<li>Targets: int</li>
 <li>Class: Psychic</li></ul>
 		</section>
 		<footer></footer>
@@ -379,6 +380,25 @@ Turns immobilized resets on curse of loki.
 
 
 	<article>
+		<a name="Concussion"></a>
+		<header>
+			<h3>🥊  Concussion  ◆</h3>
+		</header>
+		<section>A hard blow to the head should do the trick.</section>
+		<section>Hit: 1d20 vs ac / Damage: 1d4
+Curse: int -1-2 depending on how hard the hit is, with a maximum total curse of -3 per level. Afterwards penalties come out of hp instead.</section>
+		<section>
+			<ul><li>Level: 1</li>
+<li>Usable by: Barbarian, Fighter</li>
+<li>MSRP: 50</li>
+<li>Targets: ac</li>
+<li>Class: Melee</li></ul>
+		</section>
+		<footer></footer>
+	</article>
+
+
+	<article>
 		<a name="Constrict"></a>
 		<header>
 			<h3>➰➰  Constrict  ★</h3>
@@ -416,8 +436,7 @@ Turns immobilized resets on curse of loki.
 		</header>
 		<section>Sweep the leg... You have a problem with that? No mercy.</section>
 		<section>Hit: 1d20 vs ac / Damage: 1d4
-Curse: ac -1
-maximum total curse of -3 per level, afterwards penalties come out of hp instead.</section>
+Curse: ac -1, with a maximum total curse of -3 per level. Afterwards penalties come out of hp instead.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
@@ -852,14 +871,14 @@ Health: 2d4
 			<h3>🎻  The Kalevala (1d4)  ★</h3>
 		</header>
 		<section>Steadfast old Väinämöinen himself fashioned this instrument of eternal joy. Tune its pikebone pegs and it may lead you on to victory.</section>
-		<section>Hit: 1d20 vs ac / Damage: 1d4</section>
+		<section>Hit: 1d20 vs int / Damage: 1d4</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
 <li>Hit chance: 71% | DPT: 7</li>
 <li>MSRP: 80</li>
-<li>Targets: ac</li>
-<li>Class: Psychic</li></ul>
+<li>Targets: int</li>
+<li>Class: , Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -923,8 +942,7 @@ Turns immobilized resets on curse of loki.
 		</header>
 		<section>Slow down your enemies like it's 1919.</section>
 		<section>Hit: 1d20 vs ac / Damage: 1d4
-Curse: dex -1
-maximum total curse of -3 per level, afterwards penalties come out of hp instead.</section>
+Curse: dex -1, with a maximum total curse of -3 per level. Afterwards penalties come out of hp instead.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
