--- a/cards.html
+++ b/cards.html
@@ -878,7 +878,7 @@ Health: 2d4
 <li>Hit chance: 71% | DPT: 7</li>
 <li>MSRP: 80</li>
 <li>Targets: int</li>
-<li>Class: , Psychic</li></ul>
+<li>Class: Acoustic, Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
