--- a/cards.html
+++ b/cards.html
@@ -103,7 +103,7 @@
 		<header>
 			<h3>❗️  Adrenaline Rush  ○</h3>
 		</header>
-		<section>Life or Death brings about a certain focus... A certain AWAKENESS most people don't actually want. It's what you live for. It's how you know you exist. You embrace it a welcome the rush.</section>
+		<section>Life or Death brings about a certain focus... A certain AWAKENESS most people don't actually want. It's what you live for. It's how you know you exist. You embrace it and welcome the rush.</section>
 		<section>Boost: dex +1Boost: str +1</section>
 		<section>
 			<ul><li>Level: 2</li>
@@ -189,7 +189,7 @@ Stroke of luck increases damage per hit by 1.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 69% | DPT: 3</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -245,7 +245,7 @@ On what would have been their next turn, if you are still alive you drain 1d4 hp
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Weeping Angel</li>
-<li>Effect chance: 76%</li>
+<li>Effect chance: 73%</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Psychic</li></ul>
@@ -370,7 +370,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Basilisk</li>
-<li>Hit chance: 74% | DPT: 3</li>
+<li>Hit chance: 77% | DPT: 4</li>
 <li>Effect chance: 100%</li>
 <li>MSRP: 130</li>
 <li>Targets: dex</li>
@@ -442,7 +442,7 @@ Curse: ac -1, with a maximum total curse of -3 per level. Afterwards penalties c
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 75% | DPT: 3</li>
+<li>Hit chance: 76% | DPT: 3</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -593,7 +593,7 @@ Chance to flee if below a quarter health</section>
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
-<li>Hit chance: 69% | DPT: 3</li>
+<li>Hit chance: 73% | DPT: 3</li>
 <li>MSRP: 10</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -613,7 +613,7 @@ Strikes opponent with lowest current hp.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 71% | DPT: 3</li>
+<li>Hit chance: 72% | DPT: 3</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -633,7 +633,7 @@ Strikes opponent with highest current hp.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 70% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 30</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -682,8 +682,8 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Fighter, Barbarian</li>
-<li>Hit chance: 95% | DPT: 7</li>
-<li>Effect chance: 74%</li>
+<li>Hit chance: 97% | DPT: 7</li>
+<li>Effect chance: 75%</li>
 <li>MSRP: 80</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -715,7 +715,7 @@ Turns immobilized resets on curse of loki.
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Bard, Barbarian, Fighter</li>
 <li>Hit chance: 63% | DPT: 2</li>
-<li>Effect chance: 61%</li>
+<li>Effect chance: 62%</li>
 <li>MSRP: 50</li>
 <li>Targets: dex</li>
 <li>Class: Melee</li></ul>
@@ -739,7 +739,7 @@ Turns immobilized resets on curse of loki.
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
 <li>Hit chance: 1% | DPT: 0</li>
-<li>Heal chance: 93% | HPT: 3</li>
+<li>Heal chance: 94% | HPT: 3</li>
 <li>MSRP: 10</li>
 <li>Class: Heal</li></ul>
 		</section>
@@ -757,7 +757,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
-<li>Hit chance: 69% | DPT: 3</li>
+<li>Hit chance: 74% | DPT: 3</li>
 <li>MSRP: 10</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -777,7 +777,7 @@ Roll for damage twice, and use the best result.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Barbarian, Fighter</li>
-<li>Hit chance: 70% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -808,8 +808,8 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Minotaur</li>
-<li>Hit chance: 70% | DPT: 3</li>
-<li>Effect chance: 48%</li>
+<li>Hit chance: 73% | DPT: 3</li>
+<li>Effect chance: 49%</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -829,7 +829,7 @@ Roll twice for hit. Use the best roll.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Minotaur</li>
-<li>Hit chance: 93% | DPT: 4</li>
+<li>Hit chance: 94% | DPT: 4</li>
 <li>MSRP: 50</li>
 <li>Targets: str</li>
 <li>Class: Melee</li></ul>
@@ -854,7 +854,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Bard, Cleric</li>
-<li>Hit chance: 70% | DPT: 4</li>
+<li>Hit chance: 71% | DPT: 4</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -873,7 +873,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 75% | DPT: 8</li>
+<li>Hit chance: 77% | DPT: 8</li>
 <li>MSRP: 80</li>
 <li>Targets: int</li>
 <li>Class: Acoustic, Psychic</li></ul>
@@ -893,7 +893,7 @@ Roll twice for hit. Use the best roll.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Bard, Cleric, Fighter</li>
-<li>Hit chance: 89% | DPT: 4</li>
+<li>Hit chance: 91% | DPT: 4</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -923,7 +923,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Weeping Angel</li>
-<li>Hit chance: 16% | DPT: 1</li>
+<li>Hit chance: 15% | DPT: 1</li>
 <li>Effect chance: 80%</li>
 <li>MSRP: 20</li>
 <li>Targets: int</li>
@@ -944,7 +944,7 @@ Curse: dex -1, with a maximum total curse of -3 per level. Afterwards penalties 
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 71% | DPT: 2</li>
+<li>Hit chance: 72% | DPT: 2</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -980,7 +980,7 @@ Curse: dex -1, with a maximum total curse of -3 per level. Afterwards penalties 
 		<section>
 			<ul><li>Level: 3</li>
 <li>Usable by: Bard, Barbarian</li>
-<li>Hit chance: 70% | DPT: 6</li>
+<li>Hit chance: 74% | DPT: 6</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1002,8 +1002,8 @@ Usually restores between 0-3hp to each opponent, and 1-4hp for the player.
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: All</li>
-<li>Hit chance: 2% | DPT: 0</li>
-<li>Heal chance: 79% | HPT: 2</li>
+<li>Hit chance: 2% | DPT: 1</li>
+<li>Heal chance: 78% | HPT: 2</li>
 <li>MSRP: 130</li>
 <li>Class: Poison, AOE</li></ul>
 		</section>
@@ -1082,7 +1082,7 @@ Roll for attack, if you roll less than 10, roll again and use the second roll no
 			<ul><li>Level: 4</li>
 <li>Usable by: All</li>
 <li>Hit chance: 1% | DPT: 0</li>
-<li>Heal chance: 99% | HPT: 6</li>
+<li>Heal chance: 99% | HPT: 5</li>
 <li>MSRP: 80</li>
 <li>Class: Heal</li></ul>
 		</section>
@@ -1106,7 +1106,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Fighter</li>
-<li>Hit chance: 70% | DPT: 4</li>
+<li>Hit chance: 73% | DPT: 4</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1150,7 +1150,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 70% | DPT: 4</li>
+<li>Hit chance: 73% | DPT: 4</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1170,7 +1170,7 @@ Damage: 1d6 +1 per wound suffered</section>
 		<section>
 			<ul><li>Level: 3</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 70% | DPT: 8</li>
+<li>Hit chance: 71% | DPT: 8</li>
 <li>MSRP: 80</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1194,7 +1194,7 @@ Damage: 1d6 +1 per wound suffered</section>
 			<ul><li>Level: 2</li>
 <li>Usable by: All</li>
 <li>Hit chance: 1% | DPT: 0</li>
-<li>Heal chance: 97% | HPT: 5</li>
+<li>Heal chance: 96% | HPT: 4</li>
 <li>MSRP: 50</li>
 <li>Class: Heal</li></ul>
 		</section>
@@ -1207,7 +1207,7 @@ Damage: 1d6 +1 per wound suffered</section>
 		<header>
 			<h3>🤬  Woke  ★</h3>
 		</header>
-		<section>POTUS tweets and everyone gets dumber. But in you, it brings about a certain rage... A certain WOKENESS most people don't actually want. It's what you live for. It's how you know you exist. You embrace it a welcome the rush.</section>
+		<section>Someone tweets and everyone gets dumber. But in you, it brings about a certain rage... A certain WOKENESS most people don't actually want. It's what you live for. It's how you know you exist. You embrace it and welcome the rush.</section>
 		<section>Boost player: str +1Boost player: ac +1Curses all players: int -1</section>
 		<section>
 			<ul><li>Level: 1</li>
@@ -1231,7 +1231,7 @@ Damage: 1d6 +1 per wound suffered</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Bard, Fighter</li>
-<li>Hit chance: 70% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 30</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
