--- a/cards.html
+++ b/cards.html
@@ -93,6 +93,7 @@
 <li><a href="#Turkey Thigh">Turkey Thigh</a></li>
 <li><a href="#Vengeful Rampage">Vengeful Rampage</a></li>
 <li><a href="#Whiskey Shot">Whiskey Shot</a></li>
+<li><a href="#Woke">Woke</a></li>
 <li><a href="#Wooden Spear">Wooden Spear</a></li>
   </ul-->
 
@@ -102,7 +103,7 @@
 		<header>
 			<h3>❗️  Adrenaline Rush  ○</h3>
 		</header>
-		<section>Life or Death brings about a certain focus... A certain AWAKENESS most people don't actually want. It's what you live for. It's how you know you exist. You embrace it a welcome the rush.</section>
+		<section>Life or Death brings about a certain focus... A certain AWAKENESS most people don't actually want. It's what you live for. It's how you know you exist. You embrace it and welcome the rush.</section>
 		<section>Boost: dex +1Boost: str +1</section>
 		<section>
 			<ul><li>Level: 2</li>
@@ -165,7 +166,7 @@ Stroke of luck increases damage per hit by 1.</section>
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Gladiator</li>
-<li>Hit chance: 66% | DPT: 5</li>
+<li>Hit chance: 71% | DPT: 5</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -188,7 +189,7 @@ Stroke of luck increases damage per hit by 1.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 69% | DPT: 3</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -244,7 +245,7 @@ On what would have been their next turn, if you are still alive you drain 1d4 hp
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Weeping Angel</li>
-<li>Effect chance: 76%</li>
+<li>Effect chance: 73%</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Psychic</li></ul>
@@ -369,7 +370,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Basilisk</li>
-<li>Hit chance: 78% | DPT: 4</li>
+<li>Hit chance: 77% | DPT: 4</li>
 <li>Effect chance: 100%</li>
 <li>MSRP: 130</li>
 <li>Targets: dex</li>
@@ -390,7 +391,7 @@ Curse: int -1-2 depending on how hard the hit is, with a maximum total curse of 
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Barbarian, Fighter</li>
-<li>Hit chance: 84% | DPT: 3</li>
+<li>Hit chance: 86% | DPT: 3</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -420,7 +421,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Basilisk</li>
-<li>Hit chance: 77% | DPT: 4</li>
+<li>Hit chance: 77% | DPT: 3</li>
 <li>Effect chance: 100%</li>
 <li>MSRP: 80</li>
 <li>Targets: dex</li>
@@ -441,7 +442,7 @@ Curse: ac -1, with a maximum total curse of -3 per level. Afterwards penalties c
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 73% | DPT: 2</li>
+<li>Hit chance: 76% | DPT: 3</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -592,7 +593,7 @@ Chance to flee if below a quarter health</section>
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
-<li>Hit chance: 67% | DPT: 3</li>
+<li>Hit chance: 73% | DPT: 3</li>
 <li>MSRP: 10</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -612,7 +613,7 @@ Strikes opponent with lowest current hp.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 68% | DPT: 3</li>
+<li>Hit chance: 72% | DPT: 3</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -632,7 +633,7 @@ Strikes opponent with highest current hp.</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 66% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 30</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -681,7 +682,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Fighter, Barbarian</li>
-<li>Hit chance: 96% | DPT: 7</li>
+<li>Hit chance: 97% | DPT: 7</li>
 <li>Effect chance: 75%</li>
 <li>MSRP: 80</li>
 <li>Targets: ac</li>
@@ -713,8 +714,8 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Bard, Barbarian, Fighter</li>
-<li>Hit chance: 61% | DPT: 2</li>
-<li>Effect chance: 61%</li>
+<li>Hit chance: 63% | DPT: 2</li>
+<li>Effect chance: 62%</li>
 <li>MSRP: 50</li>
 <li>Targets: dex</li>
 <li>Class: Melee</li></ul>
@@ -756,7 +757,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: All</li>
-<li>Hit chance: 68% | DPT: 3</li>
+<li>Hit chance: 74% | DPT: 3</li>
 <li>MSRP: 10</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -776,7 +777,7 @@ Roll for damage twice, and use the best result.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Barbarian, Fighter</li>
-<li>Hit chance: 69% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -807,8 +808,8 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: Beginner</li>
 <li>Usable by: Minotaur</li>
-<li>Hit chance: 68% | DPT: 3</li>
-<li>Effect chance: 46%</li>
+<li>Hit chance: 73% | DPT: 3</li>
+<li>Effect chance: 49%</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -828,7 +829,7 @@ Roll twice for hit. Use the best roll.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Minotaur</li>
-<li>Hit chance: 93% | DPT: 4</li>
+<li>Hit chance: 94% | DPT: 4</li>
 <li>MSRP: 50</li>
 <li>Targets: str</li>
 <li>Class: Melee</li></ul>
@@ -853,7 +854,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Bard, Cleric</li>
-<li>Hit chance: 68% | DPT: 4</li>
+<li>Hit chance: 71% | DPT: 4</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -872,7 +873,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 76% | DPT: 8</li>
+<li>Hit chance: 77% | DPT: 8</li>
 <li>MSRP: 80</li>
 <li>Targets: int</li>
 <li>Class: Acoustic, Psychic</li></ul>
@@ -892,7 +893,7 @@ Roll twice for hit. Use the best roll.</section>
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Bard, Cleric, Fighter</li>
-<li>Hit chance: 87% | DPT: 4</li>
+<li>Hit chance: 91% | DPT: 4</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -922,7 +923,7 @@ Turns immobilized resets on curse of loki.
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Weeping Angel</li>
-<li>Hit chance: 14% | DPT: 1</li>
+<li>Hit chance: 15% | DPT: 1</li>
 <li>Effect chance: 80%</li>
 <li>MSRP: 20</li>
 <li>Targets: int</li>
@@ -943,7 +944,7 @@ Curse: dex -1, with a maximum total curse of -3 per level. Afterwards penalties 
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: All</li>
-<li>Hit chance: 67% | DPT: 2</li>
+<li>Hit chance: 72% | DPT: 2</li>
 <li>MSRP: 50</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -979,7 +980,7 @@ Curse: dex -1, with a maximum total curse of -3 per level. Afterwards penalties 
 		<section>
 			<ul><li>Level: 3</li>
 <li>Usable by: Bard, Barbarian</li>
-<li>Hit chance: 67% | DPT: 5</li>
+<li>Hit chance: 74% | DPT: 6</li>
 <li>MSRP: 130</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1001,8 +1002,8 @@ Usually restores between 0-3hp to each opponent, and 1-4hp for the player.
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: All</li>
-<li>Hit chance: 1% | DPT: 0</li>
-<li>Heal chance: 79% | HPT: 2</li>
+<li>Hit chance: 2% | DPT: 1</li>
+<li>Heal chance: 78% | HPT: 2</li>
 <li>MSRP: 130</li>
 <li>Class: Poison, AOE</li></ul>
 		</section>
@@ -1038,7 +1039,7 @@ Roll for attack, if you roll less than 10, roll again and use the second roll no
 		<section>
 			<ul><li>Level: 2</li>
 <li>Usable by: Cleric, Fighter</li>
-<li>Hit chance: 85% | DPT: 4</li>
+<li>Hit chance: 87% | DPT: 4</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1105,7 +1106,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Fighter</li>
-<li>Hit chance: 68% | DPT: 4</li>
+<li>Hit chance: 73% | DPT: 4</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1149,7 +1150,7 @@ Health: 2d4
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 68% | DPT: 4</li>
+<li>Hit chance: 73% | DPT: 4</li>
 <li>MSRP: 20</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1169,7 +1170,7 @@ Damage: 1d6 +1 per wound suffered</section>
 		<section>
 			<ul><li>Level: 3</li>
 <li>Usable by: Barbarian</li>
-<li>Hit chance: 69% | DPT: 8</li>
+<li>Hit chance: 71% | DPT: 8</li>
 <li>MSRP: 80</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
@@ -1193,9 +1194,27 @@ Damage: 1d6 +1 per wound suffered</section>
 			<ul><li>Level: 2</li>
 <li>Usable by: All</li>
 <li>Hit chance: 1% | DPT: 0</li>
-<li>Heal chance: 97% | HPT: 4</li>
+<li>Heal chance: 96% | HPT: 4</li>
 <li>MSRP: 50</li>
 <li>Class: Heal</li></ul>
+		</section>
+		<footer></footer>
+	</article>
+
+
+	<article>
+		<a name="Woke"></a>
+		<header>
+			<h3>🤬  Woke  ★</h3>
+		</header>
+		<section>Someone tweets and everyone gets dumber. But in you, it brings about a certain rage... A certain WOKENESS most people don't actually want. It's what you live for. It's how you know you exist. You embrace it and welcome the rush.</section>
+		<section>Boost player: str +1Boost player: ac +1Curses all players: int -1</section>
+		<section>
+			<ul><li>Level: 1</li>
+<li>Usable by: Barbarian</li>
+<li>MSRP: 80</li>
+<li>Targets: ac</li>
+<li>Class: Acoustic, Psychic</li></ul>
 		</section>
 		<footer></footer>
 	</article>
@@ -1212,7 +1231,7 @@ Damage: 1d6 +1 per wound suffered</section>
 		<section>
 			<ul><li>Level: 1</li>
 <li>Usable by: Bard, Fighter</li>
-<li>Hit chance: 68% | DPT: 4</li>
+<li>Hit chance: 72% | DPT: 4</li>
 <li>MSRP: 30</li>
 <li>Targets: ac</li>
 <li>Class: Melee</li></ul>
